# telegram-ai-companion

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_initial.sql  002_locations_and_patterns.sql  003_life_state.sql  004_weekly_and_experiments.sql  005_routines.sql
scripts/: export_data.py  recompute_embeddings.py  reset_proactive_dates.py  restore_data.py  wipe_data.py
src/: config.py  logging_setup.py  main.py
src/bot/: keyboards.py  middleware.py  onboarding.py
src/bot/handlers/: chat.py  commands.py  diary.py  experiments.py  location.py  planner.py  tasks.py  voice.py
src/core/: challenge.py  embeddings.py  extraction.py  life_state.py  llm.py  memory.py  personalization.py  proactive_gate.py  prompts.py  routines.py  signals.py  task_closure.py  tools.py  weekly_plan.py
src/db/: client.py  repo.py  repo_extra.py
src/domain/: models.py
src/services/: geo.py  pattern_detector.py  places.py  proactive.py  scheduler.py  voice.py  weather.py  wiki.py
