[project]
name = "telegram-ai-companion"
version = "0.1.0"
description = "Personal AI assistant in Telegram with long-term RAG memory, native tool use, and adaptive proactive messaging"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "anthropic>=0.39",
    "asyncpg>=0.29",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "httpx>=0.27",
    "tzdata>=2024.1",
    "python-dateutil>=2.9",
    "truststore>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
